<resources>
    <string name="app_name">My Application</string>
    <string name="login_etUsername">Username</string>
    <string name="login_etPassword">password</string>
    <string name="login_btnLogin">Login</string>
    <string name="login_txtTitle">Login</string>
    <string name="login_txt_NotRegisterd">Not Registered?</string>
    <string name="login_registerHref"><u><b>create an Account</b></u></string>
    <string name="BaseUrl">http://10.0.2.2:7038/api/</string>
    <string name="Register_txtTitle">Sign up</string>
    <string name="Register_toLogin"><u><b>Login</b></u></string>
    <string name="Register_already_have_an_account">Already Have an account?</string>
    <string name="Register_create_account">Create account</string>
    <string name="Register_password">Password</string>
    <string name="Register_nickname">Nickname</string>
    <string name="btnSave">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="changed_server">Server</string>
</resources>